# aiohttp-github-repositories

./: .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
clickhouse/docker-entrypoint-initdb.d/: 10_init.sql
src/: clickhouse.py  config.py  dto.py  github_repos_saver.py  main.py  serializers.py
tests/: conftest.py  factories.py  test_github_saver.py  test_github_scrapper.py
