[project]
name = "aiohttp-github-repositories"
version = "0.1.0"
description = ""
authors = [
    {name = "Холоднов Эмиль",email = "emil.kholod@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.11.11,<3.12.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.isort]
profile = "black"
filter_files = true
line_length = 88
known_third_party = "aiohttp"
src_paths = "./src"

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "DC100", "D100",
]
exclude = [
    ".git",
    "__pycache__",
]
inline-quotes = '"'
