[project]
name = "aiohttp-github-repositories"
version = "0.1.0"
description = ""
authors = [
    {name = "Холоднов Эмиль",email = "emil.kholod@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiohttp (>=3.11.11,<3.12.0)",
    "aiolimiter (>=1.2.1,<2.0.0)",
    "environs (>=14.1.1,<15.0.0)",
    "aiochclient (>=2.6.0,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest-aiohttp = "^1.1.0"

[tool.isort]
profile = "black"
filter_files = true
line_length = 88
src_paths = "./src"

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "DC100", "D100",
]
exclude = [
    ".git",
    "__pycache__",
]
inline-quotes = '"'

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
